<resources>
    <string name="app_name">Smart Campus</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="import_package">Import Package</string>
    <string name="close">Close</string>
    <string name="search">Search</string>
    <string name="drawer_open">Open Navigation Menu</string>
    <string name="drawer_close">Close Navigation Menu</string>
    <string name="program">PROGRAM</string>
    <string name="ok">OK</string>
    <string name="all">All Programs</string>
    <string name="bar_graph_desc">Bar Graph</string>
    <string name="estric">*</string>
    <string name="source">Source:</string>
    <string name="loading">Loading&#8230;</string>
    <string name="refresh">Refresh</string>
    <string name="correct">CORRECT</string>
    <string name="incorrect">INCORRECT</string>
    <string name="left">LEFT</string>
    <string name="q">Q</string>
    <string name="take_picture">Take a picture</string>
    <string name="choose_gallery">Choose from your gallery</string>
    <string name="percentage">%</string>
    <string name="attempt">ATTEMPTED</string>
    <string name="notattempt">UNATTEMPTED</string>
    <string name="hello_exclamation">HELLO!</string>
    <string name="take_a_minute_to_see_app">Take a minute to see how you can use this app</string>
    <string name="enter_ur_details">ENTER YOUR DETAILS</string>
    <string name="consume_content">CONSUME CONTENT</string>
    <string name="consume_content_desc">Study right through your device via videos, books, assignments etc.</string>
    <string name="take_test">TAKE TESTS ON THE GO!</string>
    <string name="take_test_desc">Assess yourself bFy taking tests and getting immediate feedback.</string>
    <string name="view_analytics">VIEW DETAILED ANALYTICS!</string>
    <string name="view_analytics_desc">View In-Depth analytics based on your performance. Improve, Practice &amp; Excel.</string>
    <string name="member_id_hint">Member ID/Email ID</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email Id*</string>
    <string name="password">Password</string>
    <string name="password_req">Password*</string>
    <string name="dob">Date of Birth*</string>
    <string name="show_password">show password</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="swipe">SWIPE</string>
    <string name="enter">ENTER</string>
    <string name="no_internet_msg">Seems like you are not connected to the Internet</string>
    <string name="connect_to_internet">Connect to Internet</string>
    <string name="connect_to_network_msg">Connect to a network and try again</string>
    <string name="connect_to_internet_msg">Connect to a Internet and try again</string>
    <string name="fetching_org_info">Fetching Organization Info&#8230;</string>
    <string name="nhance_server">Nhance Server</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_will_take_time">Please wait, login might take some time</string>
    <string name="wait_for_signup">Please wait while we sign you up</string>
    <string name="click_here_to_select_program">Click here to join a program</string>
    <string name="about">About</string>
    <string name="version">Version &#160;</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="credits">Credits</string>
    <string name="powered_by_Nhance">Powered by</string>
    <string name="credit_statement">This application has been developed by Nhance, a leading mobile application developer.</string>
    <string name="further_credits">Further Credits</string>
    <string name="categories_head">SELECT AN INTEREST CATEGORY</string>
    <string name="no_categories_found">No categories found</string>
    <string name="org_categories_tool_tip">Choose a category to get additional relevant content</string>
    <string name="my_programs">MY PROGRAMS</string>
    <string name="not_part_of_any_programs">You are not part of any programs</string>
    <string name="fetching_categories">Fetching Categories&#8230;</string>
    <string name="choose_a_category">Choose a category</string>
    <string name="fetching_category_programs">Fetching Programs&#8230;</string>
    <string name="fetching_category_program_courses">Fetching Courses&#8230;</string>
    <string name="available_programs">AVAILABLE PROGRAMS</string>
    <string name="no_programs_in_category">No programs available to join</string>
    <string name="no_courses_in_program">No courses found</string>
    <string name="join">Join</string>
    <string name="joining_msg">Please wait while we add you to the Program</string>
    <string name="description">DESCRIPTION</string>
    <string name="no_description_available">No description available</string>
    <string name="courses">COURSES</string>
    <string name="buy_now">BUY NOW</string>
    <string name="already_purchased">Already Purchased?</string>
    <string name="checking_transaction_status">Please wait while we are verifying the transaction status</string>
    <string name="transaction_successful">Transaction was successful</string>
    <string name="transaction_initating">Initiating transaction &#8230;</string>
    <string name="payment_info">PAYMENT INFO</string>
    <string name="amount_paid">Amount Paid:</string>
    <string name="payment_order_id">Order Id : </string>
    <string name="payment_communication_email">Email For Communication </string>
    <string name="joined_on">Joined On:</string>
    <string name="paid_on">Paid On:</string>
    <string name="for_payment_queries">For further queries, contact us at contact@nhancelms.com</string>
    <string name="payment_process_warning">Please do not close the page during payment process, It will cancel the transaction</string>
    <string name="program_joining_pending">You are not part of this program yet. Click the button below to know the status.</string>
    <string name="program_type">Program Type:</string>
    <string name="free">FREE</string>
    <string name="check_status">CHECK STATUS</string>
    <string name="transaction_info">TRANSACTION INFO</string>
    <string name="transaction_proceed">Proceed</string>
    <string name="transaction_email_message">Please enter a valid email address</string>
    <string name="tests_given">Tests Given: </string>
    <string name="questions_attempted">Questions Attempted: </string>
    <string name="strong_subject">Strong Subject: </string>
    <string name="no_strong_subject">---</string>
    <string name="avg_marks_profile">Avg Marks</string>
    <string name="avg_speed_profile">Avg Speed</string>
    <string name="mins_per_question">mins/question</string>
    <string name="avg_accuracy_profile">Avg Accuracy</string>
    <string name="my_study_history">MY STUDY HISTORY</string>
    <string name="no_study_history">No study history available</string>
    <string name="dummy_study_history_time">0 mins ago</string>
    <string name="taken_on">Taken on : </string>
    <string name="avg_marks">AVG. MARKS</string>
    <string name="avg_speed">AVG. SPEED</string>
    <string name="test_name">TEST NAME</string>
    <string name="marks">MARKS</string>
    <string name="speed">SPEED</string>
    <string name="mins_per_q">mins/q</string>
    <string name="level_easy">EASY</string>
    <string name="question_levels">QUESTION LEVELS</string>
    <string name="strength_weak">Weak</string>
    <string name="strength_average">Average</string>
    <string name="strength_strong">Strong</string>
    <string name="no_analytics_msg">No Analytics to Show!</string>
    <string name="no_analytics_attempt_test_msg">Attempt some tests to generate analytics </string>
    <string name="video_play">Play Video</string>
    <string name="document_decrypting_msg">Please wait while we prepare the document </string>
    <string name="test_you_are">YOU ARE</string>
    <string name="test_marks">MARKS:</string>
    <string name="score">SCORE</string>
    <string name="avg_score">AVG. SCORE</string>
    <string name="avg_time_taken">AVG. TIME TAKEN</string>
    <string name="attempts">ATTEMPTS</string>
    <string name="attempts_camel_case">Attempts </string>
    <string name="highest_score">HIGHEST SCORE</string>
    <string name="time_taken">TIME TAKEN</string>
    <string name="time_taken_collon">TIME TAKEN:</string>
    <string name="percentage_text_collon">PERCENTAGE:</string>
    <string name="percentage_text">PERCENTAGE</string>
    <string name="percentage_indicator">%</string>
    <string name="mins">mins</string>
    <string name="hrs">hrs</string>
    <string name="strength">STRENGTH</string>
    <string name="attempts_marks_distribution">ATTEMPTS MARKS DISTRIBUTION</string>
    <string name="test_data_fetch_failed">Failed to load latest test data from server</string>
    <string name="test_not_attempted_yet">No test analytics to show.This Test is not yet attempted!</string>
    <string name="take_this_test">TAKE THIS TEST</string>
    <string name="resume_this_test">RESUME THIS TEST</string>
    <string name="view_test_results">VIEW TEST RESULTS</string>
    <string name="download_test_results">DOWNLOAD TEST RESULTS</string>
    <string name="marks_caps">MARKS</string>
    <string name="marks_colon_caps">MARKS:</string>
    <string name="hours_caps">HOURS</string>
    <string name="mins_caps">MINS</string>
    <string name="subjects_caps">SUBJECTS</string>
    <string name="questions_caps">QUESTIONS</string>
    <string name="questions_colon_caps">QUESTIONS:</string>
    <string name="instructions_caps">INSTRUCTIONS</string>
    <string name="type_caps">TYPE</string>
    <string name="curriculum_caps">CURRICULUM</string>
    <string name="format_caps">FORMAT</string>
    <string name="your_answer">YOUR ANSWER</string>
    <string name="correct_answer">CORRECT ANSWER</string>
    <string name="accuracy">ACCURACY</string>
    <string name="topic">TOPIC</string>
    <string name="seperator">/</string>
    <string name="bracketStart">(</string>
    <string name="bracketEnd">)</string>
    <string name="how_to_attempt_test">HOW TO ATTEMPT TEST</string>
    <string name="got_it">GOT IT!</string>
    <string name="test_result_hidden_default_msg">Results not available yet. Will update them soon</string>
    <string name="time_left">TIME LEFT</string>
    <string name="dummy_time">00:00:00</string>
    <string name="end_test">END TEST</string>
    <string name="view_instructions">View Instructions</string>
    <string name="sort_by">Sort by</string>
    <string name="answer">Answer</string>
    <string name="enter_answer">enter answer</string>
    <string name="skip">Skip</string>
    <string name="mark_for_review">Mark for Review</string>
    <string name="unmark_for_review">Unmark</string>
    <string name="reset">Reset</string>
    <string name="dummy_duration">20:20</string>
    <string name="dummy_percentage">0%</string>
    <string name="dummy_big_string">4ff, fundamental forces, fundamental interactions, strong force, strong interaction, physics, physicist, whale balloon, orca, killer whale, helium, protons, neutrons, electrons, atoms, nuclear force, color force, repulsive, attractive, hadrons, gluons, energy, pion, force carrier, quantum physics, quantum state, universe, scishow, science, hank green</string>
    <string name="img">img</string>
    <string name="dummy_number">0</string>
    <string name="open">Open</string>
    <string name="show_sorting_options">Show Sorting Options</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="recently_added">Recently Added</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="custom_order">Custom</string>
    <string name="attempts_colon_caps">ATTEMPTS:</string>
</resources>