<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_doubts"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        android:title="@string/search"/>
    <item
        android:id="@+id/refresh_doubts_btn"
        android:icon="@drawable/refresh"
        app:showAsAction="ifRoom"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/about"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_logout"/>

</menu>