<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_page_play_bkg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/landing_page_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView

            android:id="@+id/login_page_image"
            android:layout_width="@dimen/login_insti_image_width"
            android:layout_height="@dimen/login_insti_image_height"
            android:layout_marginBottom="@dimen/login_inputs_page_image_margin_bottom"
            android:layout_marginTop="@dimen/login_inputs_page_image_margin_top"
            android:contentDescription="@string/img"
            />

        <!-- android:src="@drawable/logo"-->

        <TextView
            android:id="@+id/take_me_to_signup_page"
            style="@style/landing_last_page_buttons"
            android:background="@drawable/rounded_corner"
            android:text="@string/signup" />

        <TextView
            android:id="@+id/take_me_to_login_page"
            style="@style/landing_last_page_buttons"
            android:background="@drawable/rounded_corner"
            android:text="@string/login" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_no_internet_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_internet_msg"
            android:textColor="@color/darkergrey"
            android:textSize="@dimen/login_inputs_page_common_font_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_inputs_page_common_line_spacing"
            android:text="@string/connect_to_network_msg"
            android:textColor="@color/darkergrey"
            android:textSize="@dimen/login_inputs_page_common_font_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/open_network_setting"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/login_inputs_page_connect_button_height"
            android:layout_marginTop="@dimen/login_inputs_page_connect_button_margin_top"
            android:background="@color/grey"
            android:paddingLeft="@dimen/login_inputs_page_connect_button_side_padding"
            android:paddingRight="@dimen/login_inputs_page_connect_button_side_padding"
            android:text="@string/connect_to_internet"
            android:textColor="@color/white"
            android:textSize="@dimen/login_inputs_page_common_font_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_fetching_org_screen_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fetching_org_info"
            android:textColor="@color/darkergrey"
            android:textSize="@dimen/login_inputs_page_big_font_size" />
    </LinearLayout>

</LinearLayout>